<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:typeface="monospace"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/subhello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="30dp"
        android:text="@string/app_info"
        android:layout_below="@+id/hello"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="30dp"
        android:text="@string/support"
        android:layout_below="@+id/subhello"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/sel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/select_option"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
</RelativeLayout>