<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/c8">

        <RelativeLayout
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/nosupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nosupport"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nosupport"
                android:layout_marginTop="4dp"
                android:text="@string/mailme" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/c9"
        android:layout_below="@id/c8">

    <RelativeLayout
        android:id="@+id/source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/source1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/subsource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/source1"
            android:layout_marginTop="4dp"
            android:text="@string/subsource" />

    </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/c10"
        android:layout_below="@id/c9">

        <RelativeLayout
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/rateus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rateus"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/rate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rateus"
                android:layout_marginTop="4dp"
                android:text="@string/rategp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/c11"
        android:layout_below="@id/c10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/gtk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dev"
                android:layout_marginTop="4dp"
                android:text="@string/gtk"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/c12"
        android:layout_below="@id/c11">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/aboutus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about"
                android:layout_marginTop="4dp"
                android:text="@string/version"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>

</ScrollView>
