<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/c1">

        <RelativeLayout
            android:id="@+id/ntwrk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/nname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/network"
                android:layout_marginTop="4dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/c2">

        <RelativeLayout
            android:id="@+id/pba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pb"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pb"
                android:text="@string/pbd"
                android:layout_marginTop="4dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/c3">

        <RelativeLayout
            android:id="@+id/dba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/db"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/db"
                android:text="@string/dbd"
                android:layout_marginTop="4dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/c4">

        <RelativeLayout
            android:id="@+id/dba3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/db3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/db3"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/db3"
                android:text="@string/dbd3"
                android:layout_marginTop="4dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/c5">

    <RelativeLayout
        android:id="@+id/dba4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/db4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/db4"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/db4"
            android:text="@string/dbd4"
            android:layout_marginTop="4dp" />

    </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/c6">

        <RelativeLayout
            android:id="@+id/dndl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/dnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dnd"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dnd"
                android:text="@string/dndd"
                android:layout_marginTop="4dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

</ScrollView>